--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -52,7 +52,7 @@ function initDataTables(){
 			"bProcessing": true,
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
 			"sAjaxDataProp": "onsite."+ featureNameJSON,
-			"bDeferRender": true
+			"bDeferRender": true,
 			"sDom": "<'row-fluid'<'span6'T><'span6'f>r>t<'row-fluid'<'span6'i><'span6'p>>",
 			"oTableTools": {
 				"aButtons": [
