--- a/offsite_SQ_drilldown.html
+++ b/offsite_SQ_drilldown.html
@@ -286,7 +286,9 @@ rel="stylesheet" type="text/css">
 		  <hr>
 
 		  <p>
-		  <a href="/statseo.html">Return to top level summary</a>
+			  <script>document.write('<a href="/statseo.html?=' + websiteName +'">Return to top level summary</a>');</script>
+			  <!-- '<a href="offsite_SQ_drilldown.html?=' + websiteName + '&='+ full[1] +'">'+full[1]+'</a>'
+		  <a href="/statseo.html">Return to top level summary</a> -->
 		  </p>
 		  <div class="spacer"></div>
 		  <hr>
