load correct page with back button

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -289,9 +289,12 @@ rel="stylesheet" type="text/css">
 		  
 		  <hr>
 
+
 		  <p>
-		  <a href="/statseo.html">Return to top level summary</a>
+			  <script>document.write('<a href="/statseo.html?=' + websiteName +'">Return to top level summary for '+ websiteName +'</a>');</script>
+		
 		  </p>
+		  
 		  <div class="spacer"></div>
 		  <hr>
 
