more statseo data

--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
     <div class="hero-unit">
 		<h1>StatSEO</h1>
 		<p>See what Google is rewarding and punishing in your domain over the long term</p>
-		<p><a href="/statseo.html">See a demo</a></p>
+		<p><a href="/statseo.html">Onsite and offsite domain health diagnosis (demo version)</a></p>
+		<p><a href="/feature.html">Feature lookup by domain (demo version)</a></p>
 	</div>
 	<div class="hero-unit">
 		<h1>LinkSight</h1>
