more statseo data

--- a/statseo.html
+++ b/statseo.html
@@ -573,6 +573,14 @@ redrawGraph = function(file) {
 	
 			</div>  
 			
+		
+			<div class="make-switch" data-on-label="ONSITE" data-off-label="OFFSITE" data-on="primary" data-off="info">
+				<label>
+					Click on this switch to change the analysis type
+				</label>
+			    <input type="checkbox" checked>
+			</div>
+			
 			<hr>
 			
 			<div id="dispUrl" class="lead" >
