added switch for onsite/offsite

--- a/statseo.html
+++ b/statseo.html
@@ -7,7 +7,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
-	<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">    
+	<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">  
+	
+	<!-- for toggle switch -->
+	<link rel="stylesheet" href="bootstrap-switch/static/stylesheets/bootstrap-switch.css" />
+	  
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
 	<script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
@@ -22,6 +26,9 @@
 
 	<!-- for datatables -->
 	<script src="datatables/media/js/jquery.dataTables.js"></script>
+	
+	<!-- for toggle switch -->
+	<script src="bootstrap-switch/static/js/bootstrap-switch.js"></script>
 
 	<!-- for datatables' styling etc -->
 	<script type="text/javascript" charset="utf-8" src="datatables/media/js/ZeroClipboard.js"></script>
