added switch for onsite/offsite

--- a/statseo.html
+++ b/statseo.html
@@ -12,8 +12,8 @@
 	
 	<!-- for toggle switch -->
 	<link rel="stylesheet" href="bootstrap-switch/static/stylesheets/bootstrap-switch.css" />
-	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" />
-
+	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css">
+	
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
 	<script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
@@ -30,9 +30,9 @@
 	<script src="datatables/media/js/jquery.dataTables.js"></script>
 	
 	<!-- for toggle switch -->
-	<script src="bootstrap-switch/static/js/bootstrap-switch.js"></script>
-	<script src="http://getbootstrap.com/2.3.2/assets/js/google-code-prettify/prettify.js"></script>
-	<script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
+	<script src="bootstrap-switch/static/js/bootstrap-switch.js"></script>  
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-switch/1.7/bootstrap-switch.min.js">  
 
 	<!-- for datatables' styling etc -->
 	<script type="text/javascript" charset="utf-8" src="datatables/media/js/ZeroClipboard.js"></script>
