--- a/statseo.html
+++ b/statseo.html
@@ -32,7 +32,7 @@
 	<!-- for toggle switch -->
 	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
 	<script src="bootstrap-switch/static/js/bootstrap-switch.js"></script>  
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-switch/1.7/bootstrap-switch.min.js">  
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-switch/1.7/bootstrap-switch.min.js"></script>    
 
 	<!-- for datatables' styling etc -->
 	<script type="text/javascript" charset="utf-8" src="datatables/media/js/ZeroClipboard.js"></script>
