--- a/statseo.html
+++ b/statseo.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">  
 	
 	<!-- for toggle switch -->
+	<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8;" />
 	<link rel="stylesheet" href="bootstrap-switch/static/stylesheets/bootstrap-switch.css" />
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css">
 	
@@ -586,9 +587,6 @@ redrawGraph = function(file) {
 			
 		
 			<div class="make-switch" data-on-label="ONSITE" data-off-label="OFFSITE" data-on="primary" data-off="info">
-				<label>
-					Click on this switch to change the analysis type
-				</label>
 			    <input type="checkbox" checked>
 			</div>
 			
