--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -5,7 +5,6 @@
 	<meta charset="utf-8">
 	<title>MathSight StatSEO Demo</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- for top menu -->
 	<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
 	<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">  
@@ -14,30 +13,37 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8;" />
 	<link rel="stylesheet" href="bootstrap-switch/static/stylesheets/bootstrap-switch.css" />
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css">
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-	
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css">
 	
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
 	<script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
-	
-	<!-- for dropdown menu -->
-	<!-- Latest compiled and minified JavaScript -->
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
+	<!-- for datatables' styling -->
+	<link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
+	<link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
 	
-	
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap-theme.min.css">
+
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
+	<!-- for datatables -->
+	<script src="datatables/media/js/jquery.dataTables.js"></script>
 	
 	<!-- for toggle switch -->
 	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
 	<script src="bootstrap-switch/static/js/bootstrap-switch.js"></script>  
-	<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-switch/1.8/bootstrap-switch.min.js"></script>    
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-switch/1.8/bootstrap-switch.min.js"></script>    
 
+	<!-- for datatables' styling etc -->
+	<script type="text/javascript" charset="utf-8" src="datatables/media/js/ZeroClipboard.js"></script>
+	<script type="text/javascript" charset="utf-8" src="datatables/media/js/TableTools.js"></script>
+	<script type="text/javascript" charset="utf-8" src="http://datatables.github.com/Plugins/integration/bootstrap/2/dataTables.bootstrap.js"></script>
 	
 	
-	
+	<!-- for dropdown menu -->
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
+
 	<style>
 				canvas{
 				}
