--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -576,7 +576,7 @@ jQuery(document).ready(function($) {
 			    Select feature or StatSEO
 			    <span class="caret"></span>
 			  </button>
-			  <ul class="dropdown-menu pull-right" role="menu" aria-labelledby="dropdownMenu1">
+			  <ul class="dropdown-menu navbar-right" role="menu" aria-labelledby="dropdownMenu1">
 			    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Action</a></li>
 			    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Another action</a></li>
 			    <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Something else here</a></li>
