--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -273,21 +273,28 @@
 		  <hr>
 		  
 		  <div class="well">
-			  "
 				  Enter Domain URL:
-				  "
 			  <div class="form-group">
-				  
 				  <input type="url" class="form-control" id="inputURL">
 			  </div>
 
-			  <div class="make-switch" data-on-label="ONSITE" data-off-label="OFFSITE" data-on="primary" data-off="info">
+			  <!-- <div class="make-switch" data-on-label="ONSITE" data-off-label="OFFSITE" data-on="primary" data-off="info">
 				  <label>
 					  Select onsite or offsite
 				  </label>
 				  <input type="checkbox" id="onoffcheck" checked>
-			  </div>
+			  </div> -->
 
+			  <div class="dropdown">
+				  <button class="btn dropdown-toggle sr-only" type="button" id="dropdownMenu2" data-toggle="dropdown">
+					  Select on or offsite
+					  <span class="caret"></span>
+				  </button>
+				  <ul class="dropdown-menu navbar-right" role="menu" aria-labelledby="dropdownMenu2"> 
+					  <li role="presentation"><a role="menuitem" tabindex="-1" href="#">onsite</a></li>
+					  <li role="presentation"><a role="menuitem" tabindex="-1" href="#">offsite</a></li>
+				  </ul>
+			  </div>
 
 			  <button onclick="doStuff()" type="submit" class="btn btn-primary" id="submitUrl">
 				  submit!
