--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -269,7 +269,7 @@
 				  </div> -->
 
 				  <div class="dropdown">
-					  <button class="btn dropdown-toggle sr-only" type="button" id="dropdownMenu2" data-toggle="dropdown">
+					  <button class="btn dropdown-toggle sr-only" type="button" id="dropdownSite" data-toggle="dropdown">
 						  Select on or offsite:
 						  <span class="caret"></span>
 					  </button>
@@ -280,7 +280,7 @@
 				  </div>
 			  
 				  <div class="dropdown">
-					  <button class="btn dropdown-toggle sr-only" type="button" id="dropdownMenu1" data-toggle="dropdown">
+					  <button class="btn dropdown-toggle sr-only" type="button" id="dropdownFeature" data-toggle="dropdown">
 						  Select feature or StatSEO:
 						  <span class="caret"></span>
 					  </button>
@@ -293,7 +293,7 @@
 
 					  </ul>
 				  </div>
-			  
+				  <br><br>
 
 				  <button onclick="doStuff()" type="submit" class="btn btn-primary" id="submitUrl">
 					  submit!
