added to new demo menu setup

--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -310,17 +310,18 @@
 				  </button>
 	
 			  </div>  
-			  <a href="/onsite_SQ_drilldown.html?=rawpearls&=maximum_length_of_h1">
+			  <a href="/onsite_SQ_drilldown.html?=rawpearls&=maximum length of h1">
 				  Onsite drilldown example
 			  </a>
 			  <br>
-			  <a href="/onsite_SQ_drilldown.html?=alchemyviral&=number_of_duplicate_words">
+			  <a href="/onsite_SQ_drilldown.html?=alchemyviral&=number of duplicate words">
 				  Offsite drilldown example
 			  </a>
 			  <br>
 			  <a href="/onsite_SQ_toplevel.html?=rawpearls">
 				  Onsite StatSEO example
 			  </a>
+			  <br>
 			  <a href="/offsite_SQ_toplevel.html?=alchemyviral">
 				  Offsite StatSEO example
 			  </a>
