added to new demo menu setup

--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -310,7 +310,7 @@
 				  </button>
 	
 			  </div>  
-			  <a href="/onsite_SQ_drilldown.html?=rawpearls&=maximum length of h1">
+			  <a href="/onsite_SQ_drilldown.html?=leighmans&=maximum length of h1">
 				  Onsite drilldown example
 			  </a>
 			  <br>
