added to new demo menu setup

--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -299,7 +299,7 @@
 						  <li role="presentation"><a role="menuitem" tabindex="-1" href="#">maximum length of h1</a></li>
 						  <li role="presentation"><a role="menuitem" tabindex="-1" href="#">number of duplicate words</a></li>
 						  <li role="presentation" class="divider"></li>
-						  <li role="presentation"> <script>document.write('<a role="menuitem" tabindex="-1" href="/' + pageType + '_SQ_toplevel.html?=' + websiteName +'">StatSEO for '+ websiteName +'</a>');</script></li>
+						  <li role="presentation"> <script>document.write('<a role="menuitem" tabindex="-1" href="/' + pageType + '_SQ_toplevel.html?=' + websiteName +'">StatSEO</a>');</script></li>
 
 					  </ul>
 				  </div>
@@ -311,11 +311,11 @@
 	
 			  </div>  
 			  <a href="/onsite_SQ_drilldown.html?=leighmans&=maximum length of h1">
-				  Onsite drilldown example
+				  Onsite feature drilldown example
 			  </a>
 			  <br>
 			  <a href="/onsite_SQ_drilldown.html?=alchemyviral&=number of duplicate words">
-				  Offsite drilldown example
+				  Offsite feature drilldown example
 			  </a>
 			  <br>
 			  <a href="/onsite_SQ_toplevel.html?=rawpearls">
