--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -141,7 +141,57 @@ initDataTables();
 
 <script>
 
+/**************************************
+ * Simple test data generator
+  */
+
+ 
+function sinAndCos() {
+	var sin = [],
+	cos = [];
+
+	for (var i = 0; i < 100; i++) {
+		sin.push({x: i, y: Math.sin(i/10)});
+		cos.push({x: i, y: .5 * Math.cos(i/10)});
+	}
+ 
+	return [
+	{
+		values: sin,
+		key: 'Winning mean',
+		color: '#ff7f0e'
+	},
+	{
+		values: cos,
+		key: 'Losing Wave',
+		color: '#2ca02c'
+	}
+	];
+}
+
+
 var topLevelFile = "/json/toplevel/" + websiteName + "_ybar.json";
+
+nv.addGraph(function() {  
+	var chart = nv.models.lineChart();
+	chart.xAxis
+	.axisLabel(featureName)
+	.tickFormat(d3.format(',r'));
+
+	chart.yAxis
+	.axisLabel('Frequency')
+	.tickFormat(d3.format('.02f'));
+ 
+	d3.select('#chart svg')
+	.datum(sinAndCos())
+	.transition().duration(500)
+	.call(chart);
+
+	nv.utils.windowResize(function() { d3.select('#chart svg').call(chart) });
+
+	return chart;
+});
+
 
 
 d3.json(topLevelFile, function(data) {
@@ -331,7 +381,7 @@ rel="stylesheet" type="text/css">
 		  </div>
 	  </div>
 	  
-	  <div id="chart1" class='with-3d-shadow with-transitions'>
+	  <div id="chart" class='with-3d-shadow with-transitions'>
 		  <svg></svg>
 	  </div>
 
