--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -132,6 +132,7 @@ initDataTables();
 <script src="src/utils.js"></script>
 <script src="src/tooltip.js"></script>
 <script src="src/models/legend.js"></script>
+<script src="src/models/line.js"></script>
 <script src="src/models/axis.js"></script>
 <script src="src/models/multiBarHorizontal.js"></script>
 <script src="src/models/multiBarHorizontalChart.js"></script>
