--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -159,13 +159,13 @@ function sinAndCos() {
 	return [
 	{
 		values: sin,
-		key: 'Winning mean',
-		color: '#ff7f0e'
+		key: 'Winning Distribution',
+		color: '#00cc00'
 	},
 	{
 		values: cos,
-		key: 'Losing Wave',
-		color: '#2ca02c'
+		key: 'Losing Distribution',
+		color: '#ff0000'
 	}
 	];
 }
@@ -382,9 +382,7 @@ rel="stylesheet" type="text/css">
 		  </div>
 	  </div>
 	  
-	  <div id="chart" class='with-3d-shadow with-transitions'>
-		  <svg></svg>
-	  </div>
+
 
 	  <div class="row-fluid pitch">
 		  
@@ -393,6 +391,14 @@ rel="stylesheet" type="text/css">
 		  <hr>
 
 		  <h3><a id="F1"><script>document.write(featureName);</script></a></h3>
+			
+		  <hr>
+			
+		  <div id="chart" class='with-3d-shadow with-transitions'>
+			  <svg></svg>
+		  </div>
+			
+		  <br>
 				  
 		  <div id="dynamic">
 			  <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="example1">
