--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -382,23 +382,23 @@ rel="stylesheet" type="text/css">
 		  </div>
 	  </div>
 	  
-
+	  <div class="well">
+	  
+	  <hr>
+	  <h2>Influential Feature Value and Delta to Winning Mean</h2>
+	  <hr>
+	  
+	  </div>
+	  
+	  <div id="chart" class='with-3d-shadow with-transitions'>
+		  <svg></svg>
+	  </div>
 
 	  <div class="row-fluid pitch">
 		  
-		  <hr>
-		  <h2>Influential Feature Value and Delta to Winning Mean</h2>
-		  <hr>
+	
 
 		  <h3><a id="F1"><script>document.write(featureName);</script></a></h3>
-			
-		  <hr>
-			
-		  <div id="chart" class='with-3d-shadow with-transitions'>
-			  <svg></svg>
-		  </div>
-			
-		  <br>
 				  
 		  <div id="dynamic">
 			  <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered" id="example1">
