tidy up menus in demo

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -347,9 +347,9 @@ rel="stylesheet" type="text/css">
           <a class="brand" href="/">MathSight Demo</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-                <li class="active"><a href="/">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <!-- <li><a href="/plans.html">Plans</a></li> -->
-                <!-- <li class="active"><a href="/tour.html">Tour</a></li> -->
+				<li class="active"><a href="/statseo_feature.html">StatSEO</a></li>
 				<li><a href="/api.html">API</a></li>
 				<!-- <li><a href="/jobs.html">Jobs</a></li> -->
             </ul>
