--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -237,9 +237,9 @@
           <a class="brand" href="/">MathSight Demo</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-                <li class="active"><a href="/">Home</a></li>
+                <li><a href="/">Home</a></li>
                 <!-- <li><a href="/plans.html">Plans</a></li> -->
-                <!-- <li class="active"><a href="/tour.html">Tour</a></li> -->
+				<li class="active"><a href="/statseo_feature.html">StatSEO</a></li>
 				<li><a href="/api.html">API</a></li>
 				<!-- <li><a href="/jobs.html">Jobs</a></li> -->
             </ul>
