population of dropdown menu

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <ul class="nav">
                 <li class="active"><a href="/">Home</a></li>
                 <!-- <li><a href="/plans.html">Plans</a></li> -->
-                <li><a href="/statseo_feature.html">StatSEO</a></li> -->
+                <li><a href="/statseo_feature.html">StatSEO</a></li>
 				<li><a href="/api.html">API</a></li>
 				<!-- <li><a href="/jobs.html">Jobs</a></li> -->
             </ul>
