--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -11,7 +11,7 @@
 	
 	<!-- for toggle switch -->
 	<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8;" />
-	<link rel="stylesheet" href="bootstrap-switch/static/stylesheets/bootstrap-switch.css" />
+	<link rel="stylesheet" href="./bootstrap-switch/static/stylesheets/bootstrap-switch.css" />
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css">
 	
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
@@ -31,8 +31,8 @@
 	
 	<!-- for toggle switch -->
 	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
-	<script src="bootstrap-switch/static/js/bootstrap-switch.js"></script>  
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/bootstrap-switch/1.8/bootstrap-switch.min.js"></script>    
+	<script src="./bootstrap-switch/static/js/bootstrap-switch.js"></script>  
+	<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-switch/1.8/css/bootstrap-switch.css"></script>    
 
 	<!-- for datatables' styling etc -->
 	<script type="text/javascript" charset="utf-8" src="datatables/media/js/ZeroClipboard.js"></script>
