added table to html

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -371,6 +371,8 @@ rel="stylesheet" type="text/css">
         </div>
       </div> 
 	  
+	  
+	  
 
 	  <div class="row-fluid subheading">
 		  <div class="span12">
@@ -383,10 +385,42 @@ rel="stylesheet" type="text/css">
 	  </div>
 	  
 	  <div class="well">
-	  
-	
+
 	  <h2>Influential Feature Value and Delta to Winning Mean</h2>
 	
+	  </div>
+	  
+	  <br>
+	  
+	  <div class="panel panel-default">
+		  <div class="panel-heading">Influential Feature Value and Delta to Winning Mean</div>
+		  <div class="panel-body">
+			  :before
+			  <p>
+				  "...feature full description here..."
+			  
+			  </p>
+			  :after
+		  </div>
+		  <!-- Table -->
+		  <table class="table">
+			  <thead>
+				  <tr>
+					  <th>Feature name<</th>
+					  <th># winning URLs</th>
+					  <th>Feature winning mean</th>
+					  <th>Avg domain feature value</th>
+				  </tr>
+			  </thead>
+			  <tbody>
+				  <tr>
+					  <td><script>document.write(featureName);</script></td>
+					  <td>12</td>
+					  <td>34.2</td>
+					  <td>12.6</td>
+				  </tr>
+			  </tbody>
+		  </table>
 	  </div>
 	  
 	  <br>
