added table to html

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -406,7 +406,7 @@ rel="stylesheet" type="text/css">
 		  <table class="table">
 			  <thead>
 				  <tr>
-					  <th>Feature name<</th>
+					  <th>Feature name</th>
 					  <th># winning URLs</th>
 					  <th>Feature winning mean</th>
 					  <th>Avg domain feature value</th>
