--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -87,7 +87,7 @@ function initDataTables(){
 		$('#example1').dataTable( {
 			"bProcessing": true,
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
-			"sAjaxDataProp": "onsite."+ featureNameJSON,
+			"sAjaxDataProp": "harmful."+ featureNameJSON,
 			"bDeferRender": true,
 			"sDom": "<'row-fluid'<'span6'T><'span6'f>r>t<'row-fluid'<'span6'i><'span6'p>>",
 			"oTableTools": {
