--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -74,12 +74,14 @@
 	var locate = decodeURI(window.location);
 
 	var urlSplit = locate.split("=");
+	alert(urlSplit);
 	var websiteNameFull = urlSplit[1];
 	var featureName = urlSplit[2];
+	alert(featureName);
 	var featureNameJSON = featureName.replace(/ /g, "_");
 	var urlSplitTwo = websiteNameFull.split("&");
 	var websiteName = urlSplitTwo[0];
-
+	alert(websiteName);
 
 
 function initDataTables(){
