--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -74,14 +74,15 @@
 	var locate = decodeURI(window.location);
 
 	var urlSplit = locate.split("=");
-	alert(urlSplit);
+	// alert(urlSplit);
 	var websiteNameFull = urlSplit[1];
 	var featureName = urlSplit[2];
-	alert(featureName);
+	// alert(featureName);
 	var featureNameJSON = featureName.replace(/ /g, "_");
+	alert(featureNameJSON);
 	var urlSplitTwo = websiteNameFull.split("&");
 	var websiteName = urlSplitTwo[0];
-	alert(websiteName);
+	// alert(websiteName);
 
 
 function initDataTables(){
