added table to html

--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -315,7 +315,7 @@
 				  </button>
 	
 			  </div>  
-			  <a href="/onsite_SQ_drilldown.html?=leighmans&=maximum length of h1">
+			  <a href="/onsite_SQ_drilldown.html?=rawpearls&=average backlink dale chall readability">
 				  Onsite feature drilldown example
 			  </a>
 			  <br>
