added table to html

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -79,7 +79,7 @@
 	var featureName = urlSplit[2];
 	// alert(featureName);
 	var featureNameJSON = featureName.replace(/ /g, "_");
-	alert(featureNameJSON);
+	// alert(featureNameJSON);
 	var urlSplitTwo = websiteNameFull.split("&");
 	var websiteName = urlSplitTwo[0];
 	// alert(websiteName);
@@ -396,14 +396,9 @@ rel="stylesheet" type="text/css">
 	  <br>
 	  
 	  <div class="panel panel-default">
-		  <div class="panel-heading">Influential Feature Value and Delta to Winning Mean</div>
+		  <div class="panel-heading"></div>
 		  <div class="panel-body">
-			  :before
-			  <p>
-				  "...feature full description here..."
-			  
-			  </p>
-			  :after
+
 		  </div>
 		  <!-- Table -->
 		  <table class="table">
