added table to html

--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -315,8 +315,12 @@
 				  </button>
 	
 			  </div>  
-			  <a href="/onsite_SQ_drilldown.html?=rawpearls&=average backlink dale chall readability">
-				  Onsite feature drilldown example
+			  <a href="/onsite_SQ_drilldown.html?=rawpearls&=average backlink dale chall readability&=healthy">
+				  Onsite healthy feature drilldown example
+			  </a>
+			  <br>
+			  <a href="/onsite_SQ_drilldown.html?=rawpearls&=average backlink dale chall readability&=harmful">
+				  Onsite harmful feature drilldown example
 			  </a>
 			  <br>
 			  <a href="/onsite_SQ_drilldown.html?=alchemyviral&=number of duplicate words">
