--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -76,12 +76,15 @@
 	var urlSplit = locate.split("=");
 	// alert(urlSplit);
 	var websiteNameFull = urlSplit[1];
-	var featureName = urlSplit[2];
+	var featureNameFull = urlSplit[2];
+	var healthOrHarm = urlSplit[3] || "harmful";
+	
+	var featNameSplit = featureNameFull.split("&");
 	// alert(featureName);
-	var featureNameJSON = featureName.replace(/ /g, "_");
+	var featureNameJSON = featNameSplit[0].replace(/ /g, "_");
 	// alert(featureNameJSON);
-	var urlSplitTwo = websiteNameFull.split("&");
-	var websiteName = urlSplitTwo[0];
+	var WebNameSplit = websiteNameFull.split("&");
+	var websiteName = WebNameSplit[0];
 	// alert(websiteName);
 
 
@@ -90,7 +93,7 @@ function initDataTables(){
 		$('#example1').dataTable( {
 			"bProcessing": true,
 			"sAjaxSource": "/json/drilldown/"+websiteName+"_XDrill.json",
-			"sAjaxDataProp": "harmful."+ featureNameJSON,
+			"sAjaxDataProp": healthOrHarm + "." + featureNameJSON,
 			"bDeferRender": true,
 			"sDom": "<'row-fluid'<'span6'T><'span6'f>r>t<'row-fluid'<'span6'i><'span6'p>>",
 			"oTableTools": {
