added table to html

--- a/onsite_SQ_drilldown.html
+++ b/onsite_SQ_drilldown.html
@@ -81,6 +81,7 @@
 	
 	var featNameSplit = featureNameFull.split("&");
 	// alert(featureName);
+	var featureName = featNameSplit[0];
 	var featureNameJSON = featNameSplit[0].replace(/ /g, "_");
 	// alert(featureNameJSON);
 	var WebNameSplit = websiteNameFull.split("&");
