added table to html

--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -323,15 +323,15 @@
 				  Onsite harmful feature drilldown example
 			  </a>
 			  <br>
-			  <a href="/onsite_SQ_drilldown.html?=alchemyviral&=number of duplicate words">
-				  Offsite feature drilldown example
+			  <a href="/onsite_SQ_drilldown.html?=alchemyviral&=number of duplicate words&=harmful">
+				  Offsite harmful feature drilldown example #2
 			  </a>
 			  <br>
-			  <a href="/onsite_SQ_toplevel.html?=rawpearls">
+			  <a href="/SQ_toplevel.html?=rawpearls&=onsite">
 				  Onsite StatSEO example
 			  </a>
 			  <br>
-			  <a href="/offsite_SQ_toplevel.html?=alchemyviral">
+			  <a href="/SQ_toplevel.html?=alchemyviral&=offsite">
 				  Offsite StatSEO example
 			  </a>
 			  <br>
