--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -315,15 +315,15 @@
 				  </button>
 	
 			  </div>  
-			  <a href="/onsite_SQ_drilldown.html?=rawpearls&=average backlink dale chall readability&=healthy">
+			  <a href="/SQ_drilldown.html?=rawpearls&=average backlink dale chall readability&=onsite&=healthy">
 				  Onsite healthy feature drilldown example
 			  </a>
 			  <br>
-			  <a href="/onsite_SQ_drilldown.html?=rawpearls&=average backlink dale chall readability&=harmful">
+			  <a href="/SQ_drilldown.html?=rawpearls&=average backlink dale chall readability&=onsite&=harmful">
 				  Onsite harmful feature drilldown example
 			  </a>
 			  <br>
-			  <a href="/onsite_SQ_drilldown.html?=alchemyviral&=number of duplicate words&=harmful">
+			  <a href="/SQ_drilldown.html?=alchemyviral&=number of duplicate words&=offsite&=harmful">
 				  Offsite harmful feature drilldown example #2
 			  </a>
 			  <br>
