combined onsite and offsite drilldown htmls

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -403,8 +403,8 @@ rel="stylesheet" type="text/css">
 	  
 	  <div class="well">
 
-	  <h2>Influential Feature Value and Delta to Winning Mean</h2>
-	
+	  <h2><script>document.write("Influential Feature Value and Delta to Winning Mean for " + healthOrHarm + " links");</script></h2>
+
 	  </div>
 	  
 	  <br>
