--- a/statseo_feature.html
+++ b/statseo_feature.html
@@ -176,6 +176,7 @@
 	var websiteName = urlSplit[1] || "leighmans";
 	var pageType = "onsite";
 	var featureSel = "html5_detected"
+	
 
 	// var websiteURL = "www.leighmans.com";
 	// var websiteSplit = websiteURL.split(".");
@@ -305,7 +306,7 @@
 						  <li role="presentation"><a role="menuitem" tabindex="-1" href="#">maximum length of h1</a></li>
 						  <li role="presentation"><a role="menuitem" tabindex="-1" href="#">number of duplicate words</a></li>
 						  <li role="presentation" class="divider"></li>
-						  <li role="presentation"> <script>document.write('<a role="menuitem" tabindex="-1" href="/' + pageType + '_SQ_toplevel.html?=' + websiteName +'">StatSEO</a>');</script></li>
+						  <li role="presentation"> <script>document.write('<a role="menuitem" tabindex="-1" href="/SQ_toplevel.html?=' + websiteName +'&='+ pageType+'">StatSEO</a>');</script></li>
 					  </ul>
 				  </div>
 				  <br><br>
