combined onsite and offsite drilldown htmls

--- a/SQ_drilldown.html
+++ b/SQ_drilldown.html
@@ -402,8 +402,8 @@ rel="stylesheet" type="text/css">
 	  </div>
 	  
 	  <div class="well">
-
-	  <h2><script>document.write("Influential Feature Value and Delta to Winning Mean for " + healthOrHarm + " links");</script></h2>
+		  <h2><script>document.write(healthOrHarm + " links");</script></h2>
+		  <h3>Influential Feature Value and Delta to Winning Mean</h3>
 
 	  </div>
 	  
